==> quang-nguyen-161/Wearable_Device/max30102.c <==
#include "max30102.h"
#include "stdbool.h"
#include "app_util_platform.h"
#include "app_error.h"
#include "nrf_drv_twi.h"
#include "nrf_log.h"
#include "nrf_log_ctrl.h"
#include "nrf_log_default_backends.h"
#include "nrf_delay.h"
#include "spo2_algorithm.h"
#define TWI_INSTANCE_ID	0
#define RATE_SIZE 4

void max30102_write(uint8_t register_address, uint8_t value)
{
    ret_code_t err_code;
    uint8_t tx_buff[MAX30102_ADDR_LEN+1];
	
    //Write the register address and data into transmit buffer
    tx_buff[0] = register_address;
    tx_buff[1] = value;

    //Set the flag to false to show the transmission is not yet completed
    m_xfer_done = false;
    
    //Transmit the data over TWI Bus
    err_code = nrf_drv_twi_tx(&m_twi, MAX30102_I2C_ADDR, tx_buff, MAX30102_ADDR_LEN + 1, false);
	APP_ERROR_CHECK(err_code);
    
    //Wait until the transmission of the data is finished
    while (m_xfer_done == false);
}

void max30102_read(uint8_t register_address, uint8_t * destination, uint8_t number_of_bytes)
{
    ret_code_t err_code;

    //Set the flag to false to show the receiving is not yet completed
    m_xfer_done = false;
    
    // Send the Register address where we want to write the data
    err_code = nrf_drv_twi_tx(&m_twi, MAX30102_I2C_ADDR, &register_address, 1, true);
	APP_ERROR_CHECK(err_code);
	  
    //Wait for the transmission to get completed
    while (m_xfer_done == false){}

    //set the flag again so that we can read data from the MPU6050's internal register
    m_xfer_done = false;
	  
    // Receive the data from the MPU6050
    err_code = nrf_drv_twi_rx(&m_twi, MAX30102_I2C_ADDR, destination, number_of_bytes);
	APP_ERROR_CHECK(err_code);
		
    //wait until the transmission is completed
    while (m_xfer_done == false)
	{
		
	}
}

void max30102_init()
{
	
	uint8_t uch_dummy;
	max30102_write(MAX30102_MODE_CONFIG,0x00);
	max30102_write(MAX30102_MODE_CONFIG, 0x40);
	nrf_delay_ms(1000);
	
	
	max30102_read(MAX30102_INTERRUPT_STATUS_1, &uch_dummy, 1);
	
	max30102_write(MAX30102_INTERRUPT_ENABLE_1, 0xc0); // INTR setting
        max30102_write(MAX30102_INTERRUPT_ENABLE_2, 0x00); // INTR setting
	
	max30102_write(MAX30102_FIFO_RD_PTR, 0x00);
	max30102_write(MAX30102_FIFO_WR_PTR, 0x00);
	max30102_write(MAX30102_OVF_COUNTER, 0x00);
	
	max30102_set_fifo_config(max30102_smp_ave_1, 0, 17);
	max30102_set_mode(max30102_spo2);
	max30102_set_adc_resolution(max30102_adc_2048);
	max30102_set_sampling_rate(max30102_sr_50);
	max30102_set_led_pulse_width(max30102_pw_18_bit);
	max30102_set_led_current_1(2);
	max30102_set_led_current_2(2);

	NRF_LOG_INFO("max ok");
	NRF_LOG_FLUSH();
}

void max30102_read_fifo(uint32_t *pun_red_led, uint32_t *pun_ir_led, uint8_t idx)
{
	uint32_t un_temp = 0;
	uint8_t uch_temp;
	*pun_ir_led = 0;
	*pun_red_led = 0;
	uint8_t sample[6];

	max30102_read(MAX30102_INTERRUPT_STATUS_1, &uch_temp, 1);
	max30102_read(MAX30102_INTERRUPT_STATUS_2, &uch_temp, 1);

	max30102_read(MAX30102_FIFO_DATA, sample, 6);
	uint32_t ir_sample = ((uint32_t)(sample[0] << 16) | (uint32_t)(sample[1] << 8) | (uint32_t)(sample[2])) & 0x3ffff;
	uint32_t red_sample = ((uint32_t)(sample[3] << 16) | (uint32_t)(sample[4] << 8) | (uint32_t)(sample[5])) & 0x3ffff;
	
	pun_ir_led[idx] = ir_sample;
	pun_red_led[idx] = red_sample;
}
